cloverETL/cloveretl.engine/src/org/jetel/util/ddl2clover/DDL2Clover.java
/* Generated By:JavaCC: Do not edit this line. DDL2Clover.java */
package org.jetel.util.ddl2clover;

import java.util.*;
import java.io.*;
import org.jetel.metadata.*;
import java.math.*;
import org.jetel.data.*;

public class DDL2Clover implements DDL2CloverConstants {

        /**
		 * The class parses sql script containing only create statements. Output is a DataRecordMetadata List.
		 */

        private List<DataRecordMetadata> list = new LinkedList<DataRecordMetadata>();
        private String fieldDelimiter;
        private String recordDelimiter;

        private static final Long booleanLenght = Long.valueOf(5); // false / true
        private static final Long byteLenght = Long.valueOf(String.valueOf(Byte.MIN_VALUE).length());
        private static final Long charLenght = Long.valueOf(1); //
        private static final Long integerLenght = Long.valueOf(String.valueOf(Integer.MIN_VALUE).length());
        private static final Long longLenght = Long.valueOf(String.valueOf(Long.MIN_VALUE).length());
        private static final Long floatLenght = Long.valueOf(String.valueOf(7));
        private static final Long doubleLenght = Long.valueOf(String.valueOf(15));
        private static final Long dateLenght = Long.valueOf(10); // "10.10.2007"
        private static final Long dateTimeLenght = Long.valueOf(19); // "10.10.2007 23:10:10"
        private static final Long textLenght = Long.valueOf(256);

        public static void main(String args[]) throws ParseException, FileNotFoundException {
                DDL2Clover parser = new DDL2Clover(new FileInputStream(new File("./src/org/jetel/util/ddl2clover/ddl_statements.txt")));
                parser.getDataRecordMetadataList(";", "\u005cn");
                parser.testPrint(parser.list);
                System.out.println("Ok");
        }

        public List<DataRecordMetadata> getDataRecordMetadataList() throws ParseException {
                return getDataRecordMetadataList(null, null);
        }

        public List<DataRecordMetadata> getDataRecordMetadataList(String fieldDelimiter, String recordDelimiter) throws ParseException {
                this.fieldDelimiter = fieldDelimiter;
                this.recordDelimiter = recordDelimiter;
                while (!isEOF()) {
                        list.add(createTableStatement());
                }
                return list;
        }

        private void testPrint(List<DataRecordMetadata> list) {
                DataRecordMetadataXMLReaderWriter writer = new DataRecordMetadataXMLReaderWriter();
                for (DataRecordMetadata dataRecordMetadata : list) {
                        writer.write(dataRecordMetadata, System.out);
                        System.out.println();
                }
        }

/*******************************************************************
 * The SQL syntatic grammar starts here
 *******************************************************************/
  final public DataRecordMetadata createTableStatement() throws ParseException {
        DataRecordMetadata dataRecordMetadata;
        List<DataFieldMetadata> list;
    jj_consume_token(CREATE);
    switch (jj_nt.kind) {
    case GLOBAL:
    case LOCAL:
    case TEMPORARY:
      tableScope();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    jj_consume_token(TABLE);
    if (jj_2_1(2)) {
      jj_consume_token(IDENTIFIER);
      jj_consume_token(DOT);
    } else {
      ;
    }
                        String tableName = identifier();
                        // the record name will be constructed from the label
                        dataRecordMetadata = new DataRecordMetadata(DataRecordMetadata.EMPTY_NAME);
                        dataRecordMetadata.setLabel(tableName);
                        list = tableElementList();
                        for (DataFieldMetadata field : list) {
                            dataRecordMetadata.addField(field);
                        }
    switch (jj_nt.kind) {
    case ON:
      jj_consume_token(ON);
      jj_consume_token(COMMIT);
      switch (jj_nt.kind) {
      case DELETE:
      case PRESERVE:
        switch (jj_nt.kind) {
        case PRESERVE:
          jj_consume_token(PRESERVE);
          break;
        case DELETE:
          jj_consume_token(DELETE);
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      jj_consume_token(ROWS);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
                if (fieldDelimiter != null && recordDelimiter != null) {
                        dataRecordMetadata.setRecType(DataRecordMetadata.DELIMITED_RECORD);
                } else if (fieldDelimiter == null && recordDelimiter == null) {
                        dataRecordMetadata.setRecType(DataRecordMetadata.FIXEDLEN_RECORD);
                }
          dataRecordMetadata.normalize();
          {if (true) return dataRecordMetadata;}
    throw new Error("Missing return statement in function");
  }

  final public List<DataFieldMetadata> tableElementList() throws ParseException {
        List<DataFieldMetadata> list = new LinkedList<DataFieldMetadata>();
        DataFieldMetadata ret;
    jj_consume_token(OPENPAREN);
    ret = tableElement();
                ret.setDelimiter(fieldDelimiter);
                list.add(ret);
                skipAllUptoComaOrCloseParen();
    label_1:
    while (true) {
      switch (jj_nt.kind) {
      case COMA:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_1;
      }
      jj_consume_token(COMA);
      ret = tableElement();
                if (ret != null) {
                        ret.setDelimiter(fieldDelimiter);
                        list.add(ret);
                        skipAllUptoComaOrCloseParen();
                }
    }
                if (ret != null) {
                        ret.setDelimiter(recordDelimiter);
                }
    jj_consume_token(CLOSEPAREN);
          {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  void skipAllUptoComaOrCloseParen() throws ParseException {
        Token tok;
        int nesting = 0;
        boolean strStr = false;
        while (true) {
                tok = getToken(1);
        if (tok.kind == STRSTR && strStr) strStr=false;
        else if (tok.kind == STRSTR && !strStr) strStr=true;
                else if (!strStr) {
                        if (tok.kind == OPENPAREN) nesting++;
                else if (tok.kind == CLOSEPAREN && nesting > 0) nesting--;
                        else if (tok.kind == COMA && nesting == 0) return;
                        else if (tok.kind == CLOSEPAREN && nesting == 0) return;
                }
        tok = getNextToken();
        if (tok.image.equals("")) return;
        }
  }

  final public void tableScope() throws ParseException {
    switch (jj_nt.kind) {
    case GLOBAL:
    case LOCAL:
      switch (jj_nt.kind) {
      case GLOBAL:
        jj_consume_token(GLOBAL);
        break;
      case LOCAL:
        jj_consume_token(LOCAL);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(TEMPORARY);
  }

  final public boolean isEOF() throws ParseException {
        boolean isEof = false;
    switch (jj_nt.kind) {
    case 0:
      jj_consume_token(0);
      isEof = t();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
         {if (true) return isEof;}
    throw new Error("Missing return statement in function");
  }

  final public boolean t() throws ParseException {
         {if (true) return true;}
    throw new Error("Missing return statement in function");
  }

//+
  final public ColumnConstraint columnConstraintDefinition() throws ParseException {
        ColumnConstraint value = null;
    switch (jj_nt.kind) {
    case NOT:
      jj_consume_token(NOT);
      jj_consume_token(NULL);
                              value = ColumnConstraint.NOT_NULL;
      break;
    case NULL:
      jj_consume_token(NULL);
                        value = ColumnConstraint.NULL;
      break;
    case UNIQUE:
      jj_consume_token(UNIQUE);
                          value = ColumnConstraint.UNIQUE;
      break;
    case PRIMARY:
      jj_consume_token(PRIMARY);
      jj_consume_token(KEY);
                                 value = ColumnConstraint.PRIMARY_KEY;
      break;
    case REFERENCES:
      jj_consume_token(REFERENCES);
      tableName();
      jj_consume_token(OPENPAREN);
      identifierList();
      jj_consume_token(CLOSEPAREN);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return value;}
    throw new Error("Missing return statement in function");
  }

  final public ColumnConstraint tableConstraintSubDefinition() throws ParseException {
        ColumnConstraint value = null;
    switch (jj_nt.kind) {
    case UNIQUE:
      jj_consume_token(UNIQUE);
      jj_consume_token(OPENPAREN);
                                      identifierList();
      jj_consume_token(CLOSEPAREN);
      break;
    case PRIMARY:
      jj_consume_token(PRIMARY);
      jj_consume_token(KEY);
      jj_consume_token(OPENPAREN);
                                             identifierList();
      jj_consume_token(CLOSEPAREN);
      break;
    case FOREIGN:
      jj_consume_token(FOREIGN);
      jj_consume_token(KEY);
      jj_consume_token(OPENPAREN);
                                             identifierList();
      jj_consume_token(CLOSEPAREN);
      break;
    case REFERENCES:
      jj_consume_token(REFERENCES);
      tableName();
      jj_consume_token(OPENPAREN);
      identifierList();
      jj_consume_token(CLOSEPAREN);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return value;}
    throw new Error("Missing return statement in function");
  }

  final public void tableConstraintDefinition() throws ParseException {
    switch (jj_nt.kind) {
    case CONSTRAINT:
      jj_consume_token(CONSTRAINT);
      identifier();
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    tableConstraintSubDefinition();
  }

//+
  final public DataFieldMetadata columnDefinition() throws ParseException {
        DataFieldMetadata dataFieldMetadata;
        String name;
        DataType type;
        Object value = null;
        ColumnConstraint columnConstraint = null;
    name = columnName();
    type = dataType();
    switch (jj_nt.kind) {
    case DEFAULT_:
      jj_consume_token(DEFAULT_);
      value = defaultValue();
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    label_2:
    while (true) {
      switch (jj_nt.kind) {
      case NOT:
      case NULL:
      case PRIMARY:
      case REFERENCES:
      case UNIQUE:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_2;
      }
      columnConstraint = columnConstraintDefinition();
    }
          if (type.length == null) {
                dataFieldMetadata = new DataFieldMetadata(DataFieldMetadata.EMPTY_NAME, type.type, null);
          } else {
                //dataFieldMetadata = new DataFieldMetadata(name, type.type, type.length.shortValue());
                dataFieldMetadata = new DataFieldMetadata(DataFieldMetadata.EMPTY_NAME, type.type, type.length.shortValue());
          }
          dataFieldMetadata.setLabel(name);
          if (value != null) {
                dataFieldMetadata.setDefaultValueStr(value.toString());
          }
          if (columnConstraint != null) {
                if (ColumnConstraint.NOT_NULL == columnConstraint ||
                    ColumnConstraint.UNIQUE == columnConstraint ||
                    ColumnConstraint.PRIMARY_KEY == columnConstraint)
                dataFieldMetadata.setNullable(false);
          }
          if (type.format != null) {
                dataFieldMetadata.setFormatStr(type.format);
          }
          {if (true) return dataFieldMetadata;}
    throw new Error("Missing return statement in function");
  }

  final public DataFieldMetadata tableElement() throws ParseException {
        DataFieldMetadata ret = null;
    switch (jj_nt.kind) {
    case IDENTIFIER:
      ret = columnDefinition();
      break;
    case CONSTRAINT:
    case FOREIGN:
    case PRIMARY:
    case REFERENCES:
    case UNIQUE:
      tableConstraintDefinition();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

//+
  final public String columnName() throws ParseException {
        String ret;
    if (jj_2_2(2)) {
      identifier();
      jj_consume_token(DOT);
    } else {
      ;
    }
    ret = identifier();
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

//+TODO dodelat dalsi typu jako DATE, VARCHAR,...
  final public DataType dataType() throws ParseException {
        char type;
        Long temp = null;
        Long lenght = null;
        Long scale = null;
        String format = null;
    switch (jj_nt.kind) {
    case BIGINT:
      jj_consume_token(BIGINT);
                           type = DataFieldMetadata.INTEGER_FIELD;
      switch (jj_nt.kind) {
      case OPENPAREN:
        jj_consume_token(OPENPAREN);
        temp = integerLiteral();
        jj_consume_token(CLOSEPAREN);
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
                                                                                                                               lenght = temp != null ? temp : longLenght;
      break;
    case BINARY:
      jj_consume_token(BINARY);
                           type = DataFieldMetadata.BYTE_FIELD;
      jj_consume_token(OPENPAREN);
      temp = integerLiteral();
      jj_consume_token(CLOSEPAREN);
                                                                                                                                    lenght = temp;
      break;
    case BLOB:
      jj_consume_token(BLOB);
                         type = DataFieldMetadata.BYTE_FIELD;
      switch (jj_nt.kind) {
      case OPENPAREN:
        jj_consume_token(OPENPAREN);
        temp = integerLiteral();
        jj_consume_token(CLOSEPAREN);
                                                                                                                                    lenght = temp;
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      break;
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
                            type = DataFieldMetadata.BOOLEAN_FIELD;             lenght = integerLenght;
      break;
    case CHAR:
      jj_consume_token(CHAR);
                         type = DataFieldMetadata.STRING_FIELD;
      switch (jj_nt.kind) {
      case OPENPAREN:
        jj_consume_token(OPENPAREN);
        temp = integerLiteral();
        jj_consume_token(CLOSEPAREN);
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
                                                                                                                                       lenght = temp != null ? temp : charLenght;
      break;
    case CHARACTER:
      jj_consume_token(CHARACTER);
                              type = DataFieldMetadata.STRING_FIELD;
      switch (jj_nt.kind) {
      case OPENPAREN:
        jj_consume_token(OPENPAREN);
        temp = integerLiteral();
        jj_consume_token(CLOSEPAREN);
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
                                                                                                                               lenght = temp != null ? temp : charLenght;
      break;
    case CLOB:
      jj_consume_token(CLOB);
                         type = DataFieldMetadata.BYTE_FIELD;
      switch (jj_nt.kind) {
      case OPENPAREN:
        jj_consume_token(OPENPAREN);
        temp = integerLiteral();
        jj_consume_token(CLOSEPAREN);
                                                                                                                                    lenght = temp;
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      break;
    case DATE:
      jj_consume_token(DATE);
